# heisenbase

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  mise.toml  pawn_structure_migration.md  pyproject.toml
.github/workflows/: pr-tests.yml  test.yml
docs/: canonicalization.md  conventions.md  file_format.md  pawn_structure_migration.md  syzygy_compression.md  transitive_utility.sql
notebooks/: AGENTS.md  index_eda.py  pgn_index_eda.ipynb  pgn_index_eda.py  pyproject.toml
proptest-regressions/: position_indexer.txt
scripts/: compare_table_size.py  download_fishtest_pgns.py  download_syzygy.py  flamegraph.sh
src/: combinatorics.rs  compression.rs  generation_targets.rs  index_pgn.rs  lib.rs  main.rs  material_key.rs  position_indexer.rs  position_map.rs  score.rs  storage.rs  table_builder.rs  transform.rs  wdl_codec.rs  wdl_file.rs  wdl_score_range.rs  wdl_table.rs
src/cli/: generate.rs  index.rs  index_pgn.rs  mod.rs  syzygy.rs
src/cli/stats/: coverage.rs  frontier.rs  material.rs  mod.rs  piece_histogram.rs  size_curve.rs  summary.rs  top.rs  utility.rs
src/material_key/: hb_piece.rs  mod.rs  pawn_structure.rs  piece_counts.rs
tests/: kqvk_roundtrip.rs  wdl_file_roundtrip.rs  wdl_score_range.rs
