[package]
name = "heisenbase"
version = "0.1.0"
edition = "2024"

[dependencies]
shakmaty = "0.29.0"
clap = { version = "4.5.4", features = ["derive"] }
flate2 = "1.0"
pgn-reader = "0.28.0"
polars = { version = "0.42.0", features = ["parquet"] }
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.11.0"
insta = "1.45.0"

[dev-dependencies]
rand = "0.8"
